# chhoto-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  package.json
apps/backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
apps/backend/.agents/: settings.local.json
apps/backend/.agents/skills/: api-standards.md  authentication-guidelines.md  backend-architecture.md  code-review-checklist.md  database-guidelines.md  security-checklist.md  testing-guidelines.md
apps/backend/.agents/skills/chhoto-api/: SKILL.md
apps/backend/.agents/skills/chhoto-architecture/: SKILL.md
apps/backend/.agents/skills/chhoto-database/: SKILL.md
apps/backend/.agents/skills/chhoto-ddd-workflow/: SKILL.md
apps/backend/.agents/skills/chhoto-module/: SKILL.md
apps/backend/.agents/skills/chhoto-testing/: SKILL.md
apps/backend/docker/: docker-compose.base.yml  docker-compose.local.yml
apps/backend/docs/: architecture.md  authentication-module.md  coding-standards.md  development-guide.md
apps/backend/env/: .env.development  .env.local  .env.production  .env.test
apps/backend/migrations/: base.py  env.py  script.py.mako
apps/backend/migrations/versions/: .gitkeep  031959c695dd_user_token_model_added.py  47b8bde515a6_user_model_added.py  544fc66a1363_user_account_model_added.py  65deda53b736_user_mfa_recovery_code_model_added.py  ab3035ecb04c_country_model_added.py  b7c0d9e2aa11_audit_log_model_added.py  bd023f4fd3a3_user_session_model_added.py  d547c0d9a27d_link_session_model_added.py  e44e84a97c42_link_model_added.py  e90e1f82759a_user_mfa_model_added.py  f16c2c4a8598_user_onboarding_model_added.py
apps/backend/src/: main.py
apps/backend/src/core/: lifespan.py
apps/backend/src/core/config/: settings.py
apps/backend/src/core/utils/: common.py  response.py
apps/backend/src/data/countries/: default_countries.py
apps/backend/src/gateway/: events.py
apps/backend/src/gateway/websocket/: socket_manager.py
apps/backend/src/gateway/ws/: connection.py  connection_manager.py
apps/backend/src/modules/audit/: audit_container.py
apps/backend/src/modules/auth/: README.md  auth_container.py
apps/backend/src/modules/billing/: billing_container.py
apps/backend/tests/: __init__.py  conftest.py  test_health.py
(+701 files in other folders)
