[project]
name = "chhoto-backend"
version = "0.1.0"
description = "Chhoto App Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "dependency-injector>=4.49.0",
    "dramatiq>=2.1.0",
    "fastapi[standard]>=0.136.1",
    "geoip2>=4.8.0",
    "httpx>=0.28.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "swagger-ui-bundle>=1.1.0",
    "validators>=0.35.0",
    "user-agents>=2.2.0",
    "pre-commit>=4.6.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
addopts = "-v -r w"
filterwarnings = [
    "ignore:The garbage collector is trying to clean up non-checked-in connection:sqlalchemy.exc.SAWarning",
]

[tool.ruff.lint]
ignore = ["F403"]
